Add Let's Trade logo

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -60,6 +60,10 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "utility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp",
+        "optional": "cpp",
+        "sstream": "cpp"
     }
 }
